[gd_scene load_steps=12 format=3 uid="uid://gnnr42htktvo"]

[ext_resource type="Script" uid="uid://b4n081v4cxssv" path="res://scripts/puzzle_code_linshuck.gd" id="1_g0jyy"]
[ext_resource type="Texture2D" uid="uid://go246v4yx7b6" path="res://will_delete/ed3c8d51-ce2f-4975-9614-7c80a860da47.jpg" id="1_x714f"]
[ext_resource type="Resource" uid="uid://chkv1nrrklugy" path="res://inventory/items/player_inv.tres" id="2_r038g"]
[ext_resource type="Resource" uid="uid://cn1tx4oepy471" path="res://inventory/items/keys/note_4.tres" id="3_mjuem"]
[ext_resource type="Texture2D" uid="uid://c7eg4g0rmvbod" path="res://assets/InventoryElement-20250821T074336Z-1-001/InventoryElement/back_point.png" id="3_vg4e8"]
[ext_resource type="Texture2D" uid="uid://cvuejpj46vkqn" path="res://assets/Scene/Office/ลิ้นชัก/Unlock.png" id="4_vctgn"]
[ext_resource type="Texture2D" uid="uid://8tvw7j37nnm" path="res://assets/Scene/Office/ลิ้นชัก/Note4.png" id="5_r038g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36t6j"]

[sub_resource type="LabelSettings" id="LabelSettings_36t6j"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjuem"]
size = Vector2(20, 34.589)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1veoc"]
size = Vector2(120, 120)

[node name="LinShuck_Puzzle" type="CanvasLayer"]
script = ExtResource("1_g0jyy")
inv = ExtResource("2_r038g")
item = ExtResource("3_mjuem")

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
position = Vector2(630, 305)
scale = Vector2(0.711176, 0.711176)
texture = ExtResource("1_x714f")

[node name="UP_1" type="Area2D" parent="Node2D"]
scale = Vector2(1.00593, 1.01415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/UP_1"]
position = Vector2(463, 244)
scale = Vector2(2.28, 2.28)
shape = SubResource("RectangleShape2D_36t6j")

[node name="Down_1" type="Area2D" parent="Node2D"]
position = Vector2(-2, 180)
scale = Vector2(1.00593, 1.01415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Down_1"]
position = Vector2(463, 244)
scale = Vector2(2.28, 2.28)
shape = SubResource("RectangleShape2D_36t6j")

[node name="UP_2" type="Area2D" parent="Node2D"]
position = Vector2(99, 2)
scale = Vector2(1.00593, 1.01415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/UP_2"]
position = Vector2(463, 244)
scale = Vector2(2.28, 2.28)
shape = SubResource("RectangleShape2D_36t6j")

[node name="Down_2" type="Area2D" parent="Node2D"]
position = Vector2(96, 180)
scale = Vector2(1.00593, 1.01415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Down_2"]
position = Vector2(463, 244)
scale = Vector2(2.28, 2.28)
shape = SubResource("RectangleShape2D_36t6j")

[node name="UP_3" type="Area2D" parent="Node2D"]
position = Vector2(198, -3)
scale = Vector2(1.00593, 1.01415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/UP_3"]
position = Vector2(463, 244)
scale = Vector2(2.28, 2.28)
shape = SubResource("RectangleShape2D_36t6j")

[node name="Down_3" type="Area2D" parent="Node2D"]
position = Vector2(197, 180)
scale = Vector2(1.00593, 1.01415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Down_3"]
position = Vector2(463, 244)
scale = Vector2(2.28, 2.28)
shape = SubResource("RectangleShape2D_36t6j")

[node name="UP_4" type="Area2D" parent="Node2D"]
position = Vector2(297, -3)
scale = Vector2(1.00593, 1.01415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/UP_4"]
position = Vector2(463, 244)
scale = Vector2(2.28, 2.28)
shape = SubResource("RectangleShape2D_36t6j")

[node name="Down_4" type="Area2D" parent="Node2D"]
position = Vector2(294, 180)
scale = Vector2(1.00593, 1.01415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Down_4"]
position = Vector2(463, 244)
scale = Vector2(2.28, 2.28)
shape = SubResource("RectangleShape2D_36t6j")

[node name="Label_1" type="Label" parent="Node2D"]
offset_left = 456.0
offset_top = 314.0
offset_right = 496.0
offset_bottom = 359.0
text = "0"
label_settings = SubResource("LabelSettings_36t6j")

[node name="Label_2" type="Label" parent="Node2D"]
offset_left = 555.0
offset_top = 314.0
offset_right = 595.0
offset_bottom = 359.0
text = "0"
label_settings = SubResource("LabelSettings_36t6j")

[node name="Label_3" type="Label" parent="Node2D"]
offset_left = 654.0
offset_top = 314.0
offset_right = 694.0
offset_bottom = 359.0
text = "0"
label_settings = SubResource("LabelSettings_36t6j")

[node name="Label_4" type="Label" parent="Node2D"]
offset_left = 749.0
offset_top = 314.0
offset_right = 789.0
offset_bottom = 359.0
text = "0"
label_settings = SubResource("LabelSettings_36t6j")

[node name="open" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="open"]
position = Vector2(628, 307)
scale = Vector2(0.711, 0.711)
texture = ExtResource("4_vctgn")

[node name="Area2D" type="Area2D" parent="open"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="open/Area2D"]
position = Vector2(793, 339)
scale = Vector2(-14.4516, 9.13768)
shape = SubResource("RectangleShape2D_mjuem")

[node name="Sprite2D" type="Sprite2D" parent="open/Area2D"]
position = Vector2(791, 341)
scale = Vector2(0.711, 0.711)
texture = ExtResource("5_r038g")

[node name="Close" type="Area2D" parent="."]
position = Vector2(1023, 110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Close"]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_1veoc")

[node name="Sprite2D" type="Sprite2D" parent="Close"]
texture = ExtResource("3_vg4e8")

[connection signal="input_event" from="Node2D/UP_1" to="." method="_on_up_1_input_event"]
[connection signal="input_event" from="Node2D/Down_1" to="." method="_on_down_1_input_event"]
[connection signal="input_event" from="Node2D/UP_2" to="." method="_on_up_2_input_event"]
[connection signal="input_event" from="Node2D/Down_2" to="." method="_on_down_2_input_event"]
[connection signal="input_event" from="Node2D/UP_3" to="." method="_on_up_3_input_event"]
[connection signal="input_event" from="Node2D/Down_3" to="." method="_on_down_3_input_event"]
[connection signal="input_event" from="Node2D/UP_4" to="." method="_on_up_4_input_event"]
[connection signal="input_event" from="Node2D/Down_4" to="." method="_on_down_4_input_event"]
[connection signal="input_event" from="open/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="Close" to="." method="_on_close_input_event"]
